# psy

./: ChangeLog  LICENSE  README.rst  requirements.txt  setup.cfg
psy/: __main__.py  bdist_lambda.py  cli.py  packaging.py
psy/commands/: bdist_lambda.py
tests/: test_psy.py
