[metadata]
name = psy
author = nassim.babaci
author-email = nassim.babaci@cloudreach.co.uk
summary = Utility to package aws lambda function out of python packages.
description-file = README.rst
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: AWS
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
    psy


[entry_points]
distutils.commands =
    bdist_lambda = psy.commands.bdist_lambda:bdist_lambda
